--- a/Gltf/pom.xml
+++ b/Gltf/pom.xml
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>org.opensourcebim</groupId>
       <artifactId>pluginbase</artifactId>
-      <version>1.5.179-SNAPSHOT</version>
+      <version>1.5.179</version>
     </dependency>
   </dependencies>
   <repositories>
